<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentEditActivity">

    <TextView
        android:id="@+id/studentedit_nameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/activity_student_edit_textview_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/studentedit_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentedit_image" />

    <ImageView
        android:id="@+id/studentedit_image"
        android:layout_width="171dp"
        android:layout_height="171dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/studentedit_name"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/studentedit_nameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/studentedit_nameTitle" />

    <TextView
        android:id="@+id/studentedit_idTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/activity_student_edit_textview_id"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/studentedit_id"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentedit_nameTitle" />

    <EditText
        android:id="@+id/studentedit_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/studentedit_idTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/studentedit_idTitle" />

    <TextView
        android:id="@+id/studentedit_phoneTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/activity_student_edit_textview_phone"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/studentedit_phone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentedit_idTitle" />

    <EditText
        android:id="@+id/studentedit_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="phone"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/studentedit_phoneTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/studentedit_phoneTitle" />

    <TextView
        android:id="@+id/studentedit_addressTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/activity_student_edit_textview_address"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/studentedit_address"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentedit_phoneTitle" />

    <EditText
        android:id="@+id/studentedit_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/studentedit_addressTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/studentedit_addressTitle" />

    <Button
        android:id="@+id/studentedit_savebtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/activity_student_edit_button_save"
        app:layout_constraintBaseline_toBaselineOf="@+id/studentedit_deletebtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/studentedit_deletebtn" />

    <Button
        android:id="@+id/studentedit_deletebtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/activity_student_edit_button_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/studentedit_savebtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/studentedit_cancelbtn" />

    <Button
        android:id="@+id/studentedit_cancelbtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:text="@string/activity_student_edit_button_cancel"
        app:layout_constraintBaseline_toBaselineOf="@+id/studentedit_deletebtn"
        app:layout_constraintEnd_toStartOf="@+id/studentedit_deletebtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/studentedit_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/activity_student_edit_checkbox_checked"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentedit_addressTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>